.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/Award_Classification_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Award_Classification_Level_Name__c</fullName>
    <formula>tc9_et__Award_Classification__r.Name + &quot; - &quot; +  tc9_et__Award_Level__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Classification &amp; Level Name</label>
    <type>Text</type>
</CustomField>