.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/Default_Pay_Rate_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Pay_Rate_Pay_Code__c</fullName>
    <formula>tc9_et__Allowance_Pay_Code__r.Define_as_default_pay_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Pay Rate Pay Code</label>
    <type>Checkbox</type>
</CustomField>