.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/Fee_for_Service_Rate_Period__c.field-meta.xml
<CustomField>
    <fullName>Fee_for_Service_Rate_Period__c</fullName>
    <label>Fee for Service Rate Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>