.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Name__c</fullName>
    <description>Free text field which has &apos;Award Level&apos; populated on default of MPR record</description>
    <label>Invoice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>