.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/Pay_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Pay_Code_Name__c</fullName>
    <formula>tc9_et__Allowance_Pay_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Code Name</label>
    <type>Text</type>
</CustomField>