.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Minimum_Pay_Rate__c/fields/STP_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>STP_Payment_Type__c</fullName>
    <formula>text(tc9_et__Allowance_Pay_Code__r.tc9_pr__STP_Payment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STP Payment Type</label>
    <type>Text</type>
</CustomField>